# cocogum-redes

./: .coveragerc  .env  README.md  init_db.py  pyproject.toml  requeriments.txt  run_alembic.py
alembic/: env.py
alembic/versions/: 2315bc09a6b0_initial_migration.py  248813b8e245_auth_migration.py  46f04c5f5de2_unificar_zona_horaria_en_modelos.py  6ee18f4f392b_añadir_nuevos_roles.py  fa0fe34c4501_agregar_modelo_role.py
app/: auth.py  config.py  database.py  db.py  main.py  settings.py
app/auth/: dependencies.py  schemas.py  utils.py
app/crud/: auth.py  role.py  role_routes.py  user.py  user_routes.py
app/models/: __init__.py  role.py  user.py
app/models/crud/: user.py
app/routers/: auth.py  role.py  user.py
app/schemas/: role.py  user.py
tests/: conftest.py  test_async.py  test_auth.py  test_crud.py  test_database.py  test_main.py  test_models.py  test_pytz  test_user_crud.py
