[tool.poetry]
name = "cocogum"
version = "0.1.0"
description = "Una aplicación para uso general en todas las comunidades."
authors = ["Gustavo Mejia Quintero <admin@cocogum.org>"]
readme = "README.md"
package-mode = false  

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pydantic-settings = "^2.3.4"
pydantic = {extras = ["email"], version = "^2.8.2"}
pytest = "^8.2.2"
pytest-asyncio = "^0.20.3" 
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0" 
sqlalchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
freezegun = "^1.5.1"

[tool.pytest.ini_options]
pythonpath = ","
addopts = '-p no:warnings --cov=cocogum --cov-report=term-missing --cov-report=html'

[tool.ruff]
line-length = 79
extend-exclude = ['alembic']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT'] 

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev cocogum/app/main.py'
pre_test = 'task lint'
test = 'pytest --cov=cocogum -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
